@@ -121,6 +121,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - KLone C                Mickael Auger
 - KLone C++              Mickael Auger
 - LaTeX                  Matthais Pospiech
+- Liberty BASIC          Chris Iverson
 - Lisp                   Roberto Rossi
 - Locomotive Basic       Nacho Cabanes
 - Logtalk                Paulo Moura
